Bug 1190023 - Ensure that muting a media element dispatches the media-playback event, and also include the muted state in computing whether a media element is actively playing audio; r=cpearce